ADD TravelCalculatePremiumControllerV2