@@ -1,18 +1,29 @@
 package org.javaguru.travel.insurance.dto.v1;
 
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
 import org.javaguru.travel.insurance.core.api.command.TravelCalculatePremiumCoreCommand;
 import org.javaguru.travel.insurance.core.api.command.TravelCalculatePremiumCoreResult;
 import org.javaguru.travel.insurance.core.api.dto.AgreementDTO;
 import org.javaguru.travel.insurance.core.api.dto.PersonDTO;
 import org.javaguru.travel.insurance.core.api.dto.ValidationErrorDTO;
+import org.javaguru.travel.insurance.core.services.TravelCalculatePremiumService;
 import org.javaguru.travel.insurance.dto.Risks;
 import org.javaguru.travel.insurance.dto.ValidationError;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 @Component
-public class DtoV1Converter {
+@RequiredArgsConstructor(access = AccessLevel.PACKAGE)
+public class DtoV1Converter { //написать тесты
+
+    private final TravelCalculatePremiumService service;
+
+    public TravelCalculatePremiumResponseV1 processRequest(TravelCalculatePremiumRequestV1 request) {
+        TravelCalculatePremiumCoreResult coreResult = service.calculatePremium(buildCoreCommand(request));
+        return buildResponse(coreResult);
+    }
+
     public TravelCalculatePremiumCoreCommand buildCoreCommand(TravelCalculatePremiumRequestV1 request) {
         AgreementDTO agreement = buildAgreement(request);
         return new TravelCalculatePremiumCoreCommand(agreement);
@@ -25,8 +36,7 @@ public class DtoV1Converter {
 
     private List<ValidationError> transformValidationErrorsToV1(List<ValidationErrorDTO> coreErrors) {
         return coreErrors.stream()
-                .map(error -> new ValidationError(error.errorCode(), error.description()))
-                .collect(Collectors.toList());
+                .map(error -> new ValidationError(error.errorCode(), error.description())).toList();
     }
 
     public TravelCalculatePremiumResponseV1 buildResponse(TravelCalculatePremiumCoreResult coreResult) {
@@ -38,16 +48,16 @@ public class DtoV1Converter {
     private TravelCalculatePremiumResponseV1 buildSuccessfulResponse(TravelCalculatePremiumCoreResult coreResult) {
         AgreementDTO agreement = coreResult.getAgreement();
         TravelCalculatePremiumResponseV1 response = new TravelCalculatePremiumResponseV1();
-        response.setPersonFirstName(agreement.getPersons().get(0).getPersonFirstName());
-        response.setPersonLastName(agreement.getPersons().get(0).getPersonLastName());
-        response.setDateOfBirth(agreement.getPersons().get(0).getPersonBirthDate());
+        response.setPersonFirstName(agreement.getPersons().getFirst().getPersonFirstName());
+        response.setPersonLastName(agreement.getPersons().getFirst().getPersonLastName());
+        response.setDateOfBirth(agreement.getPersons().getFirst().getPersonBirthDate());
         response.setAgreementDateFrom(agreement.getAgreementDateFrom());
         response.setAgreementDateTo(agreement.getAgreementDateTo());
         response.setCountry(agreement.getCountry());
         response.setMedicalRiskLimitLevel(agreement.getMedicalRiskLimitLevel());
         response.setAgreementPremium(agreement.getAgreementPremium());
 
-        PersonDTO person = agreement.getPersons().get(0);
+        PersonDTO person = agreement.getPersons().getFirst();
         List<Risks> riskPremiums = person.getRisks().stream()
                 .map(riskDTO -> new Risks(riskDTO.getRiskIc(), riskDTO.getPremium()))
                 .toList();
